  * pitch_app(): added hotkeys for most buttons
  * pitch_app(): pitch prior plotted on the spectrogram
  * schwa() accepts missing values in formant frequencies
  * spectrogramFolder(), modulationSpectrumFolder(), analyzeFolder(), segmentFolder(): updated html output
  * estimateVTL() regresses multiple frequency measurements of the same formant without pre-aggregating
  * analyzeFolder(), segmentFolder(), modulationSpectrumFolder(): better integration with the output of pitch_app(), eg 'sound' renamed to 'file'


          CHANGES IN SOUNDGEN VERSION 1.6.2 [06-February-2020]
BUGS FIXED:
  * playme(): '...' removed from documentation (new CRAN requirements)

MINOR:
  * soundgen(): new argument "formantLocking" for temporarily locking a harmonic to a formant (a form of source-filter interaction)
  * soundgen(): formant drift occurs regardless of whether formants are specified as moving or static


          CHANGES IN SOUNDGEN VERSION 1.6.1 [22-January-2020]
BUGS FIXED:
  * soundgen(): stochastic formants properly added to breathing noise even without specifying VTL (bug introduced in v1.6.0)
  * soundgen(), getSpectralEnvelope(): manually specifying formant bandwidth works again (bug introduced in v1.6.0)
  * soundgen(): tempEffects(pitchDriftDep = 0) no longer crashes because removing pitch drift no longer prevents amplitude drift from working
  * transplantFormants(): step no longer conflicts with overlap
  * soundgen_app(): debugged consonant presets

MINOR:
  * soundgen(), generateNoise(): a new argument "rolloffNoiseExp" to control rolloff of the unvoiced component
  * soundgen(): if "noise" argument is numeric rather than a list, noise component is time-locked to voiced component to ensure precisely the same timing
  * soundgen(): invalidArgAction="ignore" consistently removes all limits (noise-related pars were reset to defaults in earlier versions)