@@ -380,7 +380,10 @@ segmentFolder = function(myfolder,
 
   time_start = proc.time()  # timing
   # open all .wav files in folder
-  filenames = list.files(myfolder, pattern = "*.wav|.mp3", full.names = TRUE)
+  filenames = list.files(myfolder, pattern = "*.wav|.mp3|.WAV|.MP3", full.names = TRUE)
+  if (length(filenames) < 1) {
+    stop(paste('No wav/mp3 files found in', myfolder))
+  }
   filesizes = file.info(filenames)$size
   myPars = mget(names(formals()), sys.frame(sys.nframe()))
   # exclude unnecessary args
